--- a/Hearthscience_final.Rmd
+++ b/Hearthscience_final.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Hearthscience"
+title: "Hearthscience -- Let Data Science Help You Win a Hearth Stone Game"
 author: "Chi-Hsuan Chang, Yinnan Zheng, Ji Hua, Xue Zou"
 date: "May 1, 2016"
 output: html_document
